--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -1,20 +1,21 @@
 {
-  "name": "http-backend",
+  "name": "@repo/common",
   "version": "1.0.0",
   "main": "index.js",
+  "exports": {
+    "./zod": "./src/zod.ts"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "@repo/typescript-config": "workspace:*",
-    "@repo/common": "workspace:*"
+    "@repo/typescript-config": "workspace:*"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@types/express": "^5.0.1",
-    "express": "^4.21.2"
+    "zod": "^3.24.2"
   }
 }
